# repo-util

./: .gitignore  CMakeLists.txt  README.md  clean  mk  watch
include/: config.hpp  repo.hpp  reporter.hpp  repos.hpp
src/: main.cpp
test/: CMakeLists.txt  main.cpp  watch
